--- a/package.json
+++ b/package.json
@@ -10,14 +10,21 @@
   },
   "dependencies": {
     "@prisma/client": "^5.11.0",
+    "flowbite": "^2.3.0",
     "next": "14.1.4",
     "react": "^18",
-    "react-dom": "^18"
+    "react-datepicker": "^6.5.0",
+    "react-dom": "^18",
+    "react-select": "^5.8.0",
+    "react-select-country-list": "^2.2.3",
+    "react-time-picker": "^6.6.0"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
+    "@types/react-datepicker": "^6.2.0",
     "@types/react-dom": "^18",
+    "@types/react-select-country-list": "^2.2.3",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.1.4",
