--- a/.env
+++ b/.env
@@ -4,3 +4,5 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 DATABASE_URL="postgres://postgres.bzwkofxknirfcerpelii:R7gXUadIxeTt0ZUv@aws-0-ap-south-1.pooler.supabase.com:5432/postgres"
+NEXT_PUBLIC_SLACK_CLIENT_ID=6356258938273.6852130512611
+NEXT_PUBLIC_SLACK_CLIENT_SECRET=0a845061800d56534ee190237621ece6
