--- a/package.json
+++ b/package.json
@@ -9,18 +9,23 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ant-design/icons": "^5.3.6",
     "@prisma/client": "^5.11.0",
     "@supabase/auth-helpers-nextjs": "^0.9.0",
     "@supabase/ssr": "^0.1.0",
     "@supabase/supabase-js": "^2.40.0",
+    "antd": "^5.16.4",
+    "axios": "^1.6.8",
+    "countries-list": "^3.1.0",
+    "date-holidays": "^3.23.11",
     "flowbite": "^2.3.0",
+    "moment-timezone": "^0.5.45",
     "next": "14.1.4",
     "react": "^18",
     "react-datepicker": "^6.6.0",
     "react-dom": "^18",
-    "react-select": "^5.8.0",
-    "react-select-country-list": "^2.2.3",
-    "react-time-picker": "^6.6.0"
+    "react-time-picker": "^6.6.0",
+    "timezone-support": "^3.1.0"
   },
   "devDependencies": {
     "@types/node": "^20",
