--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "react": "^18",
     "react-datepicker": "^6.6.0",
     "react-dom": "^18",
+    "react-select": "^5.8.0",
+    "react-select-country-list": "^2.2.3",
     "react-time-picker": "^6.6.0",
     "timezone-support": "^3.1.0"
   },
