--- a/package.json
+++ b/package.json
@@ -2,11 +2,15 @@
   "name": "avkash",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": ">=20.0.0"
+  },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "setup": "node --env-file=.env.local db/executefunc.js"
   },
   "dependencies": {
     "@ant-design/cssinjs": "^1.20.0",
@@ -23,7 +27,6 @@
     "flowbite": "^2.3.0",
     "moment-timezone": "^0.5.45",
     "next": "14.1.4",
-    "pg": "^8.11.5",
     "react": "^18",
     "react-datepicker": "^6.6.0",
     "react-dom": "^18",
@@ -41,6 +44,7 @@
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.1.4",
+    "pg": "^8.12.0",
     "postcss": "^8",
     "prisma": "^5.11.0",
     "tailwindcss": "^3.3.0",
