--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@types/react-dom": "^18",
     "@types/react-select-country-list": "^2.2.3",
     "autoprefixer": "^10.0.1",
+    "dotenv-cli": "^7.4.2",
     "eslint": "^8",
     "eslint-config-next": "14.1.4",
     "pg": "^8.12.0",
