--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@supabase/auth-helpers-nextjs": "^0.9.0",
     "@supabase/ssr": "^0.1.0",
     "@supabase/supabase-js": "^2.40.0",
+    "@vercel/analytics": "^1.3.1",
     "antd": "^5.16.4",
     "axios": "^1.6.8",
     "countries-list": "^3.1.0",
