--- a/package.json
+++ b/package.json
@@ -11,10 +11,10 @@
     "start": "next start",
     "lint": "next lint",
     "prisma": "npx dotenv -e .env.local -- npx prisma db push",
-    "table": "node --env-file=.env.local db/executetable.js",
-    "trigger": "node --env-file=.env.local db/executefunc.js",
-    "policy": "node --env-file=.env.local db/executepolicies.js",
-    "setup": "npm run table ; npm run trigger ; npm run policy"
+    "tables": "node --env-file=.env.local db/setup.js db/tables",
+    "functions": "node --env-file=.env.local db/setup.js db/functions",
+    "policies": "node --env-file=.env.local db/setup.js db/policies",
+    "setup": "npm run tables; npm run functions; npm run policies;"
   },
   "dependencies": {
     "@ant-design/cssinjs": "^1.20.0",
