updated imeline with functions and rpc

--- a/.env
+++ b/.env
@@ -5,4 +5,4 @@ SLACK_AUTH_URL=https://slack.com/openid/connect/authorize
 SLACK_CLIENT_ID=6356258938273.6852130512611
 SLACK_CLIENT_SECRET=0a845061800d56534ee190237621ece6
 
-NEXT_PUBLIC_REDIRECT_PATH_AFTER_OAUTH="welcome"
+NEXT_PUBLIC_REDIRECT_PATH_AFTER_OAUTH="dashboard/timeline"
