--- a/.env
+++ b/.env
@@ -1,8 +1,10 @@
 # These are not used in APP development but are here to be shared with dev.
 # Once you create your supabase account and project,
 # in Authentication / Slack, You need to provide these values
-SLACK_AUTH_URL=https://slack.com/openid/connect/authorize
-SLACK_CLIENT_ID=6356258938273.6852130512611
-SLACK_CLIENT_SECRET=0a845061800d56534ee190237621ece6
+NEXT_PUBLIC_SLACK_AUTH_URL=https://slack.com/openid/connect/authorize
+NEXT_PUBLIC_SLACK_CLIENT_ID=6356258938273.6852130512611
+NEXT_PUBLIC_SLACK_CLIENT_SECRET=0a845061800d56534ee190237621ece6
+SLACK_BOT_TOKEN='xoxb-6356258938273-7290688759655-lFh34ZlUl8kMGL0z82OQfDVs'
+
 
 NEXT_PUBLIC_REDIRECT_PATH_AFTER_OAUTH="welcome"
