--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@ant-design/icons": "^5.3.6",
     "@ant-design/nextjs-registry": "^1.0.0",
     "@prisma/client": "^5.14.0",
+    "@slack/web-api": "^7.2.0",
     "@supabase/auth-helpers-nextjs": "^0.9.0",
     "@supabase/ssr": "^0.1.0",
     "@supabase/supabase-js": "^2.40.0",
