--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "countries-list": "^3.1.0",
     "date-holidays": "^3.23.11",
     "flowbite": "^2.3.0",
+    "js-cookie": "^3.0.5",
     "moment-timezone": "^0.5.45",
     "next": "14.1.4",
     "react": "^18",
