--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
     "react-select": "^5.8.0",
     "react-select-country-list": "^2.2.3",
     "react-time-picker": "^6.6.0",
-    "timezone-support": "^3.1.0"
+    "timezone-support": "^3.1.0",
+    "uuid4": "^2.0.3"
   },
   "devDependencies": {
     "@emotion/styled": "^11.11.5",
@@ -49,6 +50,7 @@
     "@types/react-datepicker": "^6.2.0",
     "@types/react-dom": "^18",
     "@types/react-select-country-list": "^2.2.3",
+    "@types/uuid4": "^2.0.3",
     "autoprefixer": "^10.0.1",
     "dotenv-cli": "^7.4.2",
     "eslint": "^8",
