--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@ant-design/icons": "^5.3.6",
     "@ant-design/nextjs-registry": "^1.0.0",
     "@prisma/client": "^5.14.0",
+    "@stripe/stripe-js": "^4.1.0",
     "@supabase/auth-helpers-nextjs": "^0.9.0",
     "@supabase/ssr": "^0.1.0",
     "@supabase/supabase-js": "^2.40.0",
@@ -30,6 +31,7 @@
     "countries-list": "^3.1.0",
     "date-holidays": "^3.23.11",
     "flowbite": "^2.3.0",
+    "micro": "^10.0.1",
     "moment-timezone": "^0.5.45",
     "next": "14.1.4",
     "react": "^18",
@@ -38,6 +40,7 @@
     "react-select": "^5.8.0",
     "react-select-country-list": "^2.2.3",
     "react-time-picker": "^6.6.0",
+    "stripe": "^16.1.0",
     "timezone-support": "^3.1.0"
   },
   "devDependencies": {
