--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@vercel/analytics": "^1.3.1",
     "antd": "^5.16.4",
     "axios": "^1.6.8",
+    "capitalize": "^2.0.4",
     "countries-list": "^3.1.0",
     "date-holidays": "^3.23.11",
     "flowbite": "^2.3.0",
