--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "tables": "node --env-file=.env.local db/setup.js db/tables",
     "functions": "node --env-file=.env.local db/setup.js db/functions",
     "policies": "node --env-file=.env.local db/setup.js db/policies",
-    "setup": "npm run tables; npm run functions; npm run policies;"
+    "seeds": "node --env-file=.env.local db/setup.js db/seed",
+    "setup": "npm run tables; npm run seeds; npm run functions; npm run policies;"
   },
   "dependencies": {
     "@aldabil/react-scheduler": "^2.9.3",
@@ -25,7 +26,7 @@
     "@slack/web-api": "^7.3.1",
     "@supabase/auth-helpers-nextjs": "^0.9.0",
     "@supabase/ssr": "^0.1.0",
-    "@supabase/supabase-js": "^2.40.0",
+    "@supabase/supabase-js": "^2.44.4",
     "@vercel/analytics": "^1.3.1",
     "antd": "^5.16.4",
     "axios": "^1.6.8",
@@ -36,7 +37,7 @@
     "google-auth-library": "^9.11.0",
     "googleapis": "^140.0.1",
     "moment-timezone": "^0.5.45",
-    "next": "14.1.4",
+    "next": "^14.2.5",
     "react": "^18",
     "react-datepicker": "^6.6.0",
     "react-dom": "^18",
