feat: integrated razorpay into avkash

--- a/.env
+++ b/.env
@@ -2,12 +2,13 @@
 # Once you create your supabase account and project,
 # in Authentication / Slack, You need to provide these values
 NEXT_PUBLIC_SLACK_AUTH_URL=https://slack.com/openid/connect/authorize
-<<<<<<< Updated upstream
-=======
 NEXT_PUBLIC_SLACK_CLIENT_ID=6356258938273.7279987270326
 # NEXT_PUBLIC_SLACK_CLIENT_SECRET=0a845061800d56534ee190237621ece6
 NEXT_PUBLIC_SLACK_CLIENT_SECRET=191a051daa9b5c320f2038139af49bd0
 # SLACK_BOT_TOKEN='xoxb-6356258938273-7290688759655-O2Pr7OyRgmuI2S40YM3GFCCo'
 
->>>>>>> Stashed changes
 NEXT_PUBLIC_REDIRECT_PATH_AFTER_OAUTH="welcome"
+
+RAZORPAY_KEY_ID=rzp_test_HYb5wY5i8VABeZ
+RAZORPAY_KEY_SECRET=PiLaQ26DCLTmCKvObBdOAvT5
+RAZORPAY_WEBHOOK_SECRET=srihari
