added two more sections and privacy, T& C, contact, FAQ in the homepage but still need to implement it for the mobile view

--- a/package.json
+++ b/package.json
@@ -36,9 +36,11 @@
     "googleapis": "^140.0.1",
     "moment-timezone": "^0.5.45",
     "next": "14.1.4",
+    "nodemailer": "^6.7.2",
     "react": "^18",
     "react-datepicker": "^6.6.0",
     "react-dom": "^18",
+    "react-scroll": "^1.9.0",
     "react-select": "^5.8.0",
     "react-select-country-list": "^2.2.3",
     "react-time-picker": "^6.6.0",
@@ -48,18 +50,20 @@
   "devDependencies": {
     "@emotion/styled": "^11.11.5",
     "@types/node": "^20",
+    "@types/nodemailer": "^6.4.15",
     "@types/react": "^18",
     "@types/react-datepicker": "^6.2.0",
     "@types/react-dom": "^18",
+    "@types/react-scroll": "^1.8.10",
     "@types/react-select-country-list": "^2.2.3",
     "@types/uuid4": "^2.0.3",
-    "autoprefixer": "^10.0.1",
+    "autoprefixer": "^10.4.19",
     "dotenv-cli": "^7.4.2",
     "eslint": "^8",
     "eslint-config-next": "14.1.4",
     "pg": "^8.12.0",
-    "postcss": "^8",
-    "tailwindcss": "^3.3.0",
+    "postcss": "^8.4.40",
+    "tailwindcss": "^3.4.7",
     "typescript": "^5"
   }
 }
