--- a/package.json
+++ b/package.json
@@ -40,11 +40,13 @@
     "googleapis": "^140.0.1",
     "moment-timezone": "^0.5.45",
     "next": "^14.2.5",
-    "razorpay": "^2.9.4",
     "nodemailer": "^6.7.2",
+    "razorpay": "^2.9.4",
     "react": "^18",
     "react-datepicker": "^6.6.0",
     "react-dom": "^18",
+    "react-google-recaptcha": "^3.1.0",
+    "react-google-recaptcha-v3": "^1.10.1",
     "react-scroll": "^1.9.0",
     "react-select": "^5.8.0",
     "react-select-country-list": "^2.2.3",
