--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "@types/react": "^18",
     "@types/react-datepicker": "^6.2.0",
     "@types/react-dom": "^18",
+    "@types/react-google-recaptcha": "^2.1.9",
     "@types/react-scroll": "^1.8.10",
     "@types/react-select-country-list": "^2.2.3",
     "@types/uuid4": "^2.0.3",
