--- a/package.json
+++ b/package.json
@@ -40,8 +40,8 @@
     "googleapis": "^140.0.1",
     "moment-timezone": "^0.5.45",
     "next": "^14.2.5",
-    "razorpay": "^2.9.4",
     "nodemailer": "^6.7.2",
+    "razorpay": "^2.9.4",
     "react": "^18",
     "react-datepicker": "^6.6.0",
     "react-dom": "^18",
@@ -49,6 +49,7 @@
     "react-select": "^5.8.0",
     "react-select-country-list": "^2.2.3",
     "react-time-picker": "^6.6.0",
+    "react-world-flags": "^1.6.0",
     "timezone-support": "^3.1.0",
     "uuid4": "^2.0.3"
   },
@@ -61,6 +62,7 @@
     "@types/react-dom": "^18",
     "@types/react-scroll": "^1.8.10",
     "@types/react-select-country-list": "^2.2.3",
+    "@types/react-world-flags": "^1.4.5",
     "@types/uuid4": "^2.0.3",
     "autoprefixer": "^10.4.19",
     "dotenv-cli": "^7.4.2",
