phase-1: Paving the way for the next big thing.

--- a/.env
+++ b/.env
@@ -7,4 +7,4 @@ SLACK_CLIENT_SECRET=191a051daa9b5c320f2038139af49bd0
 
 NEXT_PUBLIC_REDIRECT_PATH_AFTER_OAUTH="welcome"
 RAZORPAY_URL = https://api.razorpay.com/v1/
-NEXT_PUBLIC_REDIRECT_URL=https://avkash.io
+NEXT_PUBLIC_REDIRECT_URL=https://really-engaging-grouper.ngrok-free.app/
