--- a/package.json
+++ b/package.json
@@ -10,11 +10,11 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "tables": "node --env-file=.env.local db/setup.js db/tables",
-    "functions": "node --env-file=.env.local db/setup.js db/functions",
-    "triggers": "node --env-file=.env.local db/setup.js db/triggers",
-    "policies": "node --env-file=.env.local db/setup.js db/policies",
-    "seeds": "node --env-file=.env.local db/setup.js db/seed",
+    "tables": "dotenv -e .env.local node db/setup.js db/tables",
+    "functions": "dotenv -e .env.local node db/setup.js db/functions",
+    "triggers": "dotenv -e .env.local node db/setup.js db/triggers",
+    "policies": "dotenv -e .env.local node db/setup.js db/policies",
+    "seeds": "dotenv -e .env.local node db/setup.js db/seed",
     "setup": "npm run tables; npm run seeds; npm run functions;npm run triggers; npm run policies;"
   },
   "dependencies": {
@@ -22,7 +22,8 @@
     "@ant-design/cssinjs": "^1.20.0",
     "@ant-design/icons": "^5.3.6",
     "@ant-design/nextjs-registry": "^1.0.0",
-    "@bitnoi.se/react-scheduler": "^0.2.0",
+    "@bitnoi.se/react-scheduler": "^0.3.0",
+    "@faker-js/faker": "^7.6.0",
     "@prisma/client": "^5.14.0",
     "@slack/web-api": "^7.3.1",
     "@supabase/auth-helpers-nextjs": "^0.9.0",
@@ -68,7 +69,7 @@
     "@types/react-world-flags": "^1.4.5",
     "@types/uuid4": "^2.0.3",
     "autoprefixer": "^10.4.19",
-    "dotenv-cli": "^7.4.2",
+    "dotenv-cli": "^7.4.4",
     "eslint": "^8",
     "eslint-config-next": "14.1.4",
     "pg": "^8.12.0",
