--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "node": ">=20.0.0"
   },
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --experimental-https",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -23,6 +23,8 @@
     "@ant-design/icons": "^5.3.6",
     "@ant-design/nextjs-registry": "^1.0.0",
     "@bitnoi.se/react-scheduler": "^0.3.0",
+    "@emoji-mart/data": "^1.2.1",
+    "@emoji-mart/react": "^1.1.1",
     "@faker-js/faker": "^7.6.0",
     "@prisma/client": "^5.14.0",
     "@slack/web-api": "^7.3.1",
@@ -36,6 +38,8 @@
     "countries-list": "^3.1.0",
     "date-fns": "^3.6.0",
     "date-holidays": "^3.23.11",
+    "emoji-mart": "^5.6.0",
+    "emoji-picker-react": "^4.12.0",
     "flowbite": "^2.3.0",
     "google-auth-library": "^9.11.0",
     "googleapis": "^140.0.1",
@@ -53,6 +57,7 @@
     "react-select-country-list": "^2.2.3",
     "react-time-picker": "^6.6.0",
     "react-world-flags": "^1.6.0",
+    "swr": "^2.3.0",
     "timezone-support": "^3.1.0",
     "uuid4": "^2.0.3"
   },
