--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "countries-list": "^3.1.0",
     "date-fns": "^3.6.0",
     "date-holidays": "^3.23.11",
+    "dayjs": "^1.11.13",
     "emoji-mart": "^5.6.0",
     "emoji-picker-react": "^4.12.0",
     "flowbite": "^2.3.0",
