fix: stablizing system with lot of fixes

--- a/.env
+++ b/.env
@@ -7,3 +7,4 @@ SLACK_CLIENT_SECRET=191a051daa9b5c320f2038139af49bd0
 
 NEXT_PUBLIC_REDIRECT_PATH_AFTER_OAUTH="welcome"
 RAZORPAY_URL = https://api.razorpay.com/v1/
+NEXT_PUBLIC_REDIRECT_URL= https://main-abnormally-mosquito.ngrok-free.app/
