--- a/supabase/config.toml
+++ b/supabase/config.toml
@@ -179,8 +179,8 @@ max_frequency = "5s"
 
 # Configure one of the supported SMS providers: `twilio`, `twilio_verify`, `messagebird`, `textlocal`, `vonage`.
 [auth.sms.twilio]
-enabled = false
 account_sid = ""
+enabled = false
 message_service_sid = ""
 # DO NOT commit your Twilio auth token to git. Use environment variable substitution instead:
 auth_token = "env(SUPABASE_AUTH_SMS_TWILIO_AUTH_TOKEN)"
@@ -198,10 +198,10 @@ verify_enabled = false
 # Configure MFA via Phone Messaging
 [auth.mfa.phone]
 enroll_enabled = false
-verify_enabled = false
+max_frequency = "5s"
 otp_length = 6
 template = "Your code is {{ .Code }}"
-max_frequency = "5s"
+verify_enabled = false
 
 # Configure MFA via WebAuthn
 # [auth.mfa.web_authn]
@@ -211,9 +211,15 @@ max_frequency = "5s"
 # Use an external OAuth provider. The full list of providers are: `apple`, `azure`, `bitbucket`,
 # `discord`, `facebook`, `github`, `gitlab`, `google`, `keycloak`, `linkedin_oidc`, `notion`, `twitch`,
 # `twitter`, `slack`, `spotify`, `workos`, `zoom`.
+[auth.external.slack_oidc]
+client_id = "env(NEXT_PUBLIC_SLACK_CLIENT_ID)"
+enabled = true
+redirect_uri = "env(SLACK_REDIRECT_URI)"
+secret = "env(SLACK_CLIENT_SECRET)"
+
 [auth.external.apple]
-enabled = false
 client_id = ""
+enabled = false
 # DO NOT commit your OAuth provider secret to git. Use environment variable substitution instead:
 secret = "env(SUPABASE_AUTH_EXTERNAL_APPLE_SECRET)"
 # Overrides the default auth redirectUrl.
