--- a/supabase/config.toml
+++ b/supabase/config.toml
@@ -19,7 +19,7 @@ max_rows = 1000
 
 [api.tls]
 # Enable HTTPS endpoints locally using a self-signed certificate.
-enabled = false
+enabled = true
 
 [db]
 # Port to use for the local database URL.
@@ -99,7 +99,7 @@ enabled = true
 # in emails.
 site_url = "http://127.0.0.1:3000"
 # A list of *exact* URLs that auth providers are permitted to redirect to post authentication.
-additional_redirect_urls = ["https://localhost:3000/welcome","https://localhost:3000/welcome/install-to-slack"]
+additional_redirect_urls = ["https://localhost:3000/welcome", "https://localhost:3000/welcome/install-to-slack"]
 
 # How long tokens are valid for, in seconds. Defaults to 3600 (1 hour), maximum 604,800 (1 week).
 jwt_expiry = 3600
@@ -180,8 +180,8 @@ max_frequency = "5s"
 
 # Configure one of the supported SMS providers: `twilio`, `twilio_verify`, `messagebird`, `textlocal`, `vonage`.
 [auth.sms.twilio]
-enabled = false
 account_sid = ""
+enabled = false
 message_service_sid = ""
 # DO NOT commit your Twilio auth token to git. Use environment variable substitution instead:
 auth_token = "env(SUPABASE_AUTH_SMS_TWILIO_AUTH_TOKEN)"
@@ -199,10 +199,10 @@ verify_enabled = false
 # Configure MFA via Phone Messaging
 [auth.mfa.phone]
 enroll_enabled = false
-verify_enabled = false
+max_frequency = "5s"
 otp_length = 6
 template = "Your code is {{ .Code }}"
-max_frequency = "5s"
+verify_enabled = false
 
 # Configure MFA via WebAuthn
 # [auth.mfa.web_authn]
@@ -219,8 +219,8 @@ redirect_uri = "env(SLACK_REDIRECT_URI)"
 secret = "env(SLACK_CLIENT_SECRET)"
 
 [auth.external.apple]
-enabled = false
 client_id = ""
+enabled = false
 # DO NOT commit your OAuth provider secret to git. Use environment variable substitution instead:
 secret = "env(SUPABASE_AUTH_EXTERNAL_APPLE_SECRET)"
 # Overrides the default auth redirectUrl.
