--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "node": ">=20.0.0"
   },
   "scripts": {
-    "dev": "NODE_TLS_REJECT_UNAUTHORIZED=0 next dev --experimental-https",
+    "dev": "NODE_TLS_REJECT_UNAUTHORIZED=0 next dev --turbopack --experimental-https",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -44,12 +44,12 @@
     "google-auth-library": "^9.11.0",
     "googleapis": "^140.0.1",
     "moment-timezone": "^0.5.45",
-    "next": "^14.2.5",
+    "next": "15.2.0",
     "nodemailer": "^6.7.2",
     "razorpay": "^2.9.4",
-    "react": "^18",
+    "react": "19.0.0",
     "react-datepicker": "^6.6.0",
-    "react-dom": "^18",
+    "react-dom": "19.0.0",
     "react-google-recaptcha": "^3.1.0",
     "react-google-recaptcha-v3": "^1.10.1",
     "react-scroll": "^1.9.0",
@@ -65,9 +65,9 @@
     "@emotion/styled": "^11.11.5",
     "@types/node": "^20",
     "@types/nodemailer": "^6.4.15",
-    "@types/react": "^18",
+    "@types/react": "19.0.10",
     "@types/react-datepicker": "^6.2.0",
-    "@types/react-dom": "^18",
+    "@types/react-dom": "19.0.4",
     "@types/react-google-recaptcha": "^2.1.9",
     "@types/react-scroll": "^1.8.10",
     "@types/react-select-country-list": "^2.2.3",
@@ -76,10 +76,14 @@
     "autoprefixer": "^10.4.19",
     "dotenv-cli": "^7.4.4",
     "eslint": "^8",
-    "eslint-config-next": "14.1.4",
+    "eslint-config-next": "15.2.0",
     "pg": "^8.12.0",
     "postcss": "^8.4.40",
     "tailwindcss": "^3.4.7",
     "typescript": "^5"
+  },
+  "overrides": {
+    "@types/react": "19.0.10",
+    "@types/react-dom": "19.0.4"
   }
 }
