--- a/package.json
+++ b/package.json
@@ -15,7 +15,11 @@
     "triggers": "dotenv -e .env.local node db/setup.js db/triggers",
     "policies": "dotenv -e .env.local node db/setup.js db/policies",
     "seeds": "dotenv -e .env.local node db/setup.js db/seed",
-    "setup": "npm run tables; npm run seeds; npm run functions;npm run triggers; npm run policies;"
+    "setup": "npm run tables; npm run seeds; npm run functions;npm run triggers; npm run policies;",
+    "lint-fix": "next lint --fix",
+    "format": "prettier --check --ignore-path .gitignore .",
+    "format:fix": "prettier --write --ignore-path .gitignore .",
+    "prepare": "husky"
   },
   "dependencies": {
     "@ant-design/cssinjs": "^1.20.0",
@@ -75,12 +79,22 @@
     "@types/uuid4": "^2.0.3",
     "autoprefixer": "^10.4.19",
     "dotenv-cli": "^7.4.4",
-    "eslint": "^8",
     "eslint-config-next": "15.2.0",
     "pg": "^8.12.0",
     "postcss": "^8.4.40",
     "tailwindcss": "^3.4.7",
-    "typescript": "^5"
+    "typescript": "^5",
+    "eslint": "^8.57.1",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.0.0",
+    "husky": "^9.1.6",
+    "lint-staged": "^15.2.10",
+    "@commitlint/cli": "^19.6.0",
+    "@commitlint/config-conventional": "^19.6.0",
+    "@commitlint/types": "^19.5.0",
+    "@next/eslint-plugin-next": "^15.0.1",
+    "conventional-changelog-atom": "^5.0.0"
   },
   "overrides": {
     "@types/react": "19.0.10",
