--- a/package.json
+++ b/package.json
@@ -55,18 +55,21 @@
     "react-datepicker": "^6.6.0",
     "react-dom": "19.0.0",
     "react-google-recaptcha": "^3.1.0",
-    "react-google-recaptcha-v3": "^1.10.1",
     "react-scroll": "^1.9.0",
     "react-select": "^5.8.0",
     "react-select-country-list": "^2.2.3",
-    "react-time-picker": "^6.6.0",
+    "react-time-picker": "^7.0.0",
     "react-world-flags": "^1.6.0",
     "swr": "^2.3.0",
     "timezone-support": "^3.1.0",
     "uuid4": "^2.0.3"
   },
   "devDependencies": {
+    "@commitlint/cli": "^19.6.0",
+    "@commitlint/config-conventional": "^19.6.0",
+    "@commitlint/types": "^19.5.0",
     "@emotion/styled": "^11.11.5",
+    "@next/eslint-plugin-next": "^15.0.1",
     "@types/node": "^20",
     "@types/nodemailer": "^6.4.15",
     "@types/react": "19.0.10",
@@ -78,26 +81,29 @@
     "@types/react-world-flags": "^1.4.5",
     "@types/uuid4": "^2.0.3",
     "autoprefixer": "^10.4.19",
+    "conventional-changelog-atom": "^5.0.0",
     "dotenv-cli": "^7.4.4",
-    "eslint-config-next": "15.2.0",
-    "pg": "^8.12.0",
-    "postcss": "^8.4.40",
-    "tailwindcss": "^3.4.7",
-    "typescript": "^5",
     "eslint": "^8.57.1",
     "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-next": "15.2.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.0.0",
     "husky": "^9.1.6",
     "lint-staged": "^15.2.10",
-    "@commitlint/cli": "^19.6.0",
-    "@commitlint/config-conventional": "^19.6.0",
-    "@commitlint/types": "^19.5.0",
-    "@next/eslint-plugin-next": "^15.0.1",
-    "conventional-changelog-atom": "^5.0.0"
+    "pg": "^8.12.0",
+    "postcss": "^8.4.40",
+    "tailwindcss": "^3.4.7",
+    "typescript": "^5"
   },
   "overrides": {
     "@types/react": "19.0.10",
-    "@types/react-dom": "19.0.4"
+    "@types/react-dom": "19.0.4",
+    "@emoji-mart/react": {
+      "react": "19.0.0"
+    },
+    "react-datepicker": {
+      "react": "19.0.0",
+      "react-dom": "19.0.0"
+    }
   }
 }
