--- a/package.json
+++ b/package.json
@@ -92,6 +92,7 @@
     "lint-staged": "^15.2.10",
     "pg": "^8.12.0",
     "postcss": "^8.4.40",
+    "supabase": "^2.15.8",
     "tailwindcss": "^3.4.7",
     "typescript": "^5"
   },
