--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "lint-fix": "next lint --fix",
     "format": "prettier --check --ignore-path .gitignore .",
     "format:fix": "prettier --write --ignore-path .gitignore .",
-    "prepare": "husky"
+    "prepare": "husky",
+    "knip": "knip"
   },
   "dependencies": {
     "@ant-design/cssinjs": "^1.20.0",
@@ -70,7 +71,7 @@
     "@commitlint/types": "^19.5.0",
     "@emotion/styled": "^11.11.5",
     "@next/eslint-plugin-next": "^15.0.1",
-    "@types/node": "^20",
+    "@types/node": "^20.17.27",
     "@types/nodemailer": "^6.4.15",
     "@types/react": "19.0.10",
     "@types/react-datepicker": "^6.2.0",
@@ -89,11 +90,12 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.0.0",
     "husky": "^9.1.6",
+    "knip": "^5.46.0",
     "lint-staged": "^15.2.10",
     "pg": "^8.12.0",
     "postcss": "^8.4.40",
     "tailwindcss": "^3.4.7",
-    "typescript": "^5"
+    "typescript": "^5.8.2"
   },
   "overrides": {
     "@types/react": "19.0.10",
