--- a/package.json
+++ b/package.json
@@ -45,8 +45,9 @@
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-google-recaptcha": "^3.1.0",
+    "react-icons": "^5.5.0",
     "react-world-flags": "^1.6.0",
-    "swr": "^2.3.0",
+    "swr": "^2.3.3",
     "uuid4": "^2.0.3"
   },
   "devDependencies": {
